# PointCloudEx

./: README.md
IO/pcdread/: CMakeLists.txt  pcdread.cpp
eigenGeometry/eigenGeometry/: CMakeLists.txt  eigenGeometry.cpp
pcdread/: drill_1.6mm_0_cyb.pcd  pcdread.cpp
