cmake_minimum_required(VERSION 2.6)
project(pcdread)

find_package(PCL 1.8 REQUIRED)

include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

add_executable(pcdread pcdread.cpp)

target_link_libraries(pcdread ${PCL_LIBRARIES})

install(TARGETS pcdread RUNTIME DESTINATION bin)